fix workflow github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,4 +42,4 @@ jobs:
       - run: mix compile --warnings-as-errors
       - run: mix test
       - run: mix format --check-formatted
-      # - run: mix credo --strict
+      - run: mix credo --strict
