--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-elixir@v1
         with:
-          otp-version: 23.0.2
+          otp-version: 23.0.4
           elixir-version: 1.10.4
       - uses: actions/cache@v1
         with:
@@ -42,3 +42,4 @@ jobs:
       - run: mix compile --warnings-as-errors
       - run: mix test
       - run: mix format --check-formatted
+      - run: mix credo --strict
